--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
+        "predis/predis": "^1.1",
         "renatomarinho/laravel-page-speed": "^2.0",
         "yajra/laravel-datatables-oracle": "^9.18"
     },
