--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravelcollective/html": "^6.2",
         "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
