--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,23 +77,23 @@ development:publish:
     - .build
     - .for_development
 
-# sonarqube:check:
-#   image:
-#     name: sonarsource/sonar-scanner-cli:latest
-#     entrypoint: [""]
-#   variables:
-#     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
-#     GIT_DEPTH: "0"
-#   cache:
-#     key: "${CI_JOB_NAME}"
-#     paths:
-#       - .sonar/cache
-#   script:
-#     - sonar-scanner -Dsonar.qualitygate.wait=true -X
-#   allow_failure: true
-#   only:
-#     - develop
-#     - merge_requests
+sonarqube:check:
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - sonar-scanner -Dsonar.qualitygate.wait=true -X
+  allow_failure: true
+  only:
+    - develop
+    - merge_requests
 
 trivy:scan:
   image:
