--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^6.2",
+        "phpoffice/phpword": "v0.18.*",
         "symfony/translation": "4.3.8"
     },
     "require-dev": {
