--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,10 @@ npm:
       when: never
     - if: '$CI_PIPELINE_SOURCE == "schedule" && $PACKAGE_MANAGER_SET =~ /(\bnpm|yarn\b)/'
 
+.for_release:
+  environment:
+    name: release
+
 .for_staging:
   environment:
     name: staging
@@ -66,6 +70,19 @@ npm:
       --label org.label-schema.vcs-ref="${CI_COMMIT_SHA}"
       .
     - docker push ${CI_REGISTRY_IMAGE}:${DOCKER_IMAGE_TAG}
+
+.prepare_release:
+  extends: .build
+  stage: build
+  before_script:
+    - DOCKER_IMAGE_TAG=${CI_COMMIT_TAG}
+
+release:publish:
+  extends:
+    - .prepare_release
+    - .for_release
+  rules:
+    - if: $BY_TRIGGER == 'true'
 
 staging:publish:
   extends:
